added feature where users can new books

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
       </form>
     </div>
-    <div class="book-list">
-  
-    </div>
+    <ul class="book-list">
+      
+    </ul>
    
 
     <script src="./js/index.js"></script>
