--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
         </div>
       </form>
     </div>
-    <ul class="book-list">
+    <!-- <ul class="book-list">
       
-    </ul>
+    </ul> -->
+
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Pages</th>
+          <th>Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+     
+    </table>
    
 
     <script src="./js/index.js"></script>
