--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="flex-container">
       <div class="form-container #004d40 teal darken-4">
-        <form action="#">
+        <form action="#" id="form">
           <h1>
             Reading List
             <i class="medium material-icons left">library_books</i>
