added media queries to make responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="number" id="pages" />
           </div>
           <div class="check-box">
-            Read
+            Have you read this book before?
             <i class="small material-icons left status-icon" id="read"
               >check_box_outline_blank</i
             >
@@ -55,7 +55,7 @@
         </form>
       </div>
 
-      <table class="striped responsive-table #4db6ac teal lighten-2">
+      <table class="striped #4db6ac teal lighten-2">
         <thead>
           <tr>
             <th scope="col">
